--- a/valkey/templates/customconfig.yaml
+++ b/valkey/templates/customconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: init-scripts
+  name: valkey-init
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 data:
@@ -10,28 +10,55 @@ data:
     set -euo pipefail
 
     # Default config paths
-    VALKEY_CONF=${VALKEY_CONFIG_PATH:-/data/conf/valkey.conf}
+    VALKEY_CONFIG=${VALKEY_CONFIG_PATH:-/data/conf/valkey.conf}
+    SENTINEL_CONFIG=${SENTINEL_CONFIG_PATH:-/data/conf/sentinel.conf}
 
+    LOGFILE="/data/init.log"
     DATA_DIR="/data/conf"
 
-    # Base valkey.conf
-    generate_valkey_base() {
-      mkdir -p "$DATA_DIR"
-      {
-        echo "port 6379"
-        echo "protected-mode no"
-        echo "bind 0.0.0.0"
-        echo "dir /data"
-        echo "daemonize no"
-        echo "logfile \"\""
-        echo "loglevel ${VALKEY_LOGLEVEL:-notice}"
-      } >>"$VALKEY_CONF"
+    # Logging function
+    log() {
+      echo "$(date) $1" | tee -a "$LOGFILE"
     }
+
+    # Clean old log if requested
+    if [ "${KEEP_OLD_LOGS:-false}" != "true" ]; then
+      rm -f "$LOGFILE"
+    fi
+
+    if [ -f "$LOGFILE" ]; then
+      log "Detected restart of this instance ($HOSTNAME)"
+    fi
+
+    log "Creating configuration in $DATA_DIR..."
+    mkdir -p "$DATA_DIR"
+    rm -f "$VALKEY_CONFIG" "$SENTINEL_CONFIG"
+
+ 
+    # Base valkey.conf
+    log "Generating base valkey.conf"
+    {
+      echo "port 6379"
+      echo "protected-mode no"
+      echo "bind 0.0.0.0"
+      echo "dir /data"
+    } >>"$VALKEY_CONFIG"
+
+  {{- if .Values.auth.enabled }}
+    echo "aclfile /data/conf/users.acl" >>"$VALKEY_CONF"
+    cat <<EOF > /data/conf/users.acl
+  {{ .Values.auth.aclConfig | indent 0 }}
+    EOF
+    {{- end }}
+
 
     # Append extra configs if present
     if [ -f /usr/local/etc/valkey/valkey.conf ]; then
-      cat /usr/local/etc/valkey/valkey.conf >>"$VALKEY_CONF"
+      log "Appending /usr/local/etc/valkey/valkey.conf"
+      cat /usr/local/etc/valkey/valkey.conf >>"$VALKEY_CONFIG"
     fi
     if [ -d /extravalkeyconfigs ]; then
-      cat /extravalkeyconfigs/* >>"$VALKEY_CONF"
+      log "Appending files in /extravalkeyconfigs/"
+      cat /extravalkeyconfigs/* >>"$VALKEY_CONFIG"
     fi
+
