--- a/valkey/Chart.yaml
+++ b/valkey/Chart.yaml
@@ -4,6 +4,10 @@ description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
 appVersion: "8.1.0"
+home: https://github.com/mk-raven
+sources:
+  - https://github.com/mk-raven/valkey-helm.git
+  - https://valkey.io
 maintainers:
   - name: raven
     url: https://github.com/mk-raven
