--- a/valkey/templates/pvc.yaml
+++ b/valkey/templates/pvc.yaml
@@ -1,5 +1,4 @@
-
-{{- $createPVC := and (empty .Values.storage.persistentVolumeClaimName) (.Values.storage.requestedSize) }}
+{{- $createPVC := and (empty .Values.dataStorage.persistentVolumeClaimName) (.Values.dataStorage.requestedSize) }}
 {{- if $createPVC }}
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -7,29 +6,26 @@ metadata:
   name: {{ include "valkey.fullname" . }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
-    {{- with .Values.storage.labels }}
+    {{- with .Values.dataStorage.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- if or .Values.storage.keepPvc .Values.storage.annotations }}
+  {{- if or .Values.dataStorage.keepPvc .Values.dataStorage.annotations }}
   annotations:
-  {{- if .Values.storage.keepPvc }}
+    {{- if .Values.dataStorage.keepPvc }}
     "helm.sh/resource-policy": keep
-  {{- end }}
-  {{- with .Values.storage.annotations }}
+    {{- end }}
+    {{- with .Values.dataStorage.annotations }}
     {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- end }}
   {{- end }}
 spec:
-  {{- with .Values.storage }}
   accessModes:
-    {{- toYaml .accessModes | nindent 4 }}
+    {{- toYaml .Values.dataStorage.accessModes | nindent 4 }}
   volumeMode: Filesystem
   resources:
     requests:
-      storage: {{ .requestedSize }}
-  {{- if .className }}
-  storageClassName: {{ .className }}
+      storage: {{ .Values.dataStorage.requestedSize }}
+  {{- if .Values.dataStorage.className }}
+  storageClassName: {{ .Values.dataStorage.className }}
   {{- end }}
-  {{- end }}  
 {{- end }}
-
