--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -74,7 +74,7 @@ initResources: {}
 dataStorage:
   enable: false
   ##  Set persistentVolumenClaimName to reference an existing PVC
-  persistentVolumeClaimName: ы
+  persistentVolumeClaimName:
 
   ## Internal volume name and prefix of a created PVC
   volumeName: "valkey-data"
