fix valkey values

--- a/valkey/Chart.yaml
+++ b/valkey/Chart.yaml
@@ -11,3 +11,4 @@ sources:
 maintainers:
   - name: raven
     url: https://github.com/mk-raven
+icon: https://dyltqmyl993wv.cloudfront.net/assets/stacks/valkey/img/valkey-stack-220x234.png
