--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -100,16 +100,16 @@ dataStorage:
   enabled: false
 
   # Use existing PVC by name (skip dynamic provisioning if set)
-  persistentVolumeClaimName:
+  persistentVolumeClaimName: ""
 
   # Name of the volume (referenced in deployment)
   volumeName: "valkey-data"
 
   # Request size (e.g. 5Gi) for dynamically provisioned volume
-  requestedSize:
+  requestedSize: ""
 
   # Name of the storage class to use
-  className:
+  className: ""
 
   # Access modes for the PVC (e.g., ReadWriteOnce, ReadWriteMany)
   accessModes:
