--- a/valkey/Chart.yaml
+++ b/valkey/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v2
 name: valkey
 description: A Helm chart for Kubernetes
 type: application
-version: 0.7.1
+version: 0.7.2
 appVersion: "8.1.3"
-home: https://github.com/mk-raven
+home: https://valkey.io/valkey-helm/
 sources:
-  - https://github.com/mk-raven/valkey-helm.git
+  - https://github.com/valkey-io/valkey-helm.git
   - https://valkey.io
 maintainers:
   - name: raven
