change Helm repo url

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
 repositoryID: 359880e1-a663-48d1-b888-042883c00316
 owners:
   - name: raven
-    email: r2w5x6@protonmail.com
+    email: maikebit@gmail.com
