--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -159,6 +159,9 @@ tolerations: []
 # Affinity rules for pod scheduling
 affinity: {}
 
+# See https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints
+topologySpreadConstraints: {}
+
 # Valkey logging level: debug, verbose, notice, warning
 valkeyLogLevel: "notice"
 
