--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,45 +1,65 @@
 name: Lint and Test Charts
 
-on: pull_request
+permissions:
+  contents: read
 
 jobs:
   lint-test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        kube: ["1.31.0", "1.30.0"]  
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v4
 
       - name: Set up Helm
-        uses: azure/setup-helm@v4.2.0
+        uses: azure/setup-helm@v4
         with:
-          version: v3.17.0
+          version: v3.15.3
 
-      - uses: actions/setup-python@v5.3.0
-        with:
-          python-version: '3.x'
-          check-latest: true
+      # Use ct just to figure out which charts changed
+      - name: Install chart-testing (ct)
+        uses: helm/chart-testing-action@v2
 
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.7.0
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
+      - name: List changed charts
+        id: changed
         run: |
-          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          changed=$(ct list-changed --target-branch "${{ github.event.repository.default_branch }}")
           if [[ -n "$changed" ]]; then
             echo "changed=true" >> "$GITHUB_OUTPUT"
+            printf "%s\n" "$changed" > /tmp/changed-charts.txt
+            echo "Changed charts:" && cat /tmp/changed-charts.txt
+          else
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            echo "No chart changes."
           fi
 
-      - name: Run chart-testing (lint)
-        if: steps.list-changed.outputs.changed == 'true'
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }}
+      - name: Build chart dependencies
+        if: steps.changed.outputs.changed == 'true'
+        run: |
+          while read -r chart; do
+            [[ -z "$chart" ]] && continue
+            helm dependency build "$chart"
+          done < /tmp/changed-charts.txt
 
-      - name: Create kind cluster
-        if: steps.list-changed.outputs.changed == 'true'
-        uses: helm/kind-action@v1.12.0
+      - name: Render manifests (helm template)
+        if: steps.changed.outputs.changed == 'true'
+        run: |
+          while read -r chart; do
+            [[ -z "$chart" ]] && continue
+            out="/tmp/$(basename "$chart")-k${{ matrix.kube }}.yaml"
+            helm template "tmpl-${RANDOM}" "$chart" \
+              --kube-version "${{ matrix.kube }}" \
+              > "$out"
+            echo "Rendered $chart -> $out"
+          done < /tmp/changed-charts.txt
 
-      - name: Run chart-testing (install)
-        if: steps.list-changed.outputs.changed == 'true'
-        run: ct install --target-branch ${{ github.event.repository.default_branch }}
+      - name: Upload rendered manifests
+        if: steps.changed.outputs.changed == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: helm-template-k${{ matrix.kube }}
+          path: /tmp/*.yaml
+          if-no-files-found: ignore
