Fix topology spread constraints type in schema and adjust to array in values.yaml
Signed-off-by: Dominik Erbacher <dominik.erbacher@css.de>

--- a/valkey/values.yaml
+++ b/valkey/values.yaml
@@ -141,7 +141,7 @@ tolerations: []
 affinity: {}
 
 # See https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints
-topologySpreadConstraints: {}
+topologySpreadConstraints: []
 
 # Valkey logging level: debug, verbose, notice, warning
 valkeyLogLevel: "notice"
