Allow users to select deployment strategy

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -9,6 +9,7 @@ metadata:
     {{- include "valkey.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy: {{ .Values.deploymentStrategy }}
   selector:
     matchLabels:
       {{- include "valkey.selectorLabels" . | nindent 6 }}
