Allow users to define Deployment strategy type
Signed-off-by: Silvio Gissi <silvio@gissilabs.com>

--- a/valkey/templates/deploy_valkey.yaml
+++ b/valkey/templates/deploy_valkey.yaml
@@ -9,6 +9,8 @@ metadata:
     {{- include "valkey.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    type: {{ .Values.deploymentStrategy }}
   selector:
     matchLabels:
       {{- include "valkey.selectorLabels" . | nindent 6 }}
