Add support for custom nodePort when service type is "NodePort".
Signed-off-by: Adrian Bogatu <bogatuadrian@users.noreply.github.com>

--- a/valkey/templates/service.yaml
+++ b/valkey/templates/service.yaml
@@ -15,5 +15,8 @@ spec:
       targetPort: tcp
       protocol: TCP
       name: tcp
+      {{- if and (eq .Values.service.type "NodePort") .Values.service.nodePort }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
   selector:
     {{- include "valkey.selectorLabels" . | nindent 4 }}
