Add cluster support
Signed-off-by: Dmytro Artamonov <artamonovdima355@gmail.com>

--- a/valkey/templates/configmap.yaml
+++ b/valkey/templates/configmap.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.valkeyConfig }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,6 +5,5 @@ metadata:
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 data:
-  valkey.conf: |
-    {{- .Values.valkeyConfig | nindent 4 }}
-{{- end }}
+  valkey.conf: |-
+{{ include "valkey.generateConfig" . | indent 4 }}
