--- a/valkey/templates/service.yaml
+++ b/valkey/templates/service.yaml
@@ -1,15 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "valkey.fullname" . }}
+  name: {{ include "valkey.fullname" . }}-headless
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "valkey.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.containerPorts.valkey }}
       targetPort: tcp
       protocol: TCP
       name: tcp
+    - port: {{ .Values.containerPorts.bus }}
+      targetPort: bus
+      protocol: TCP
+      name: bus
   selector:
     {{- include "valkey.selectorLabels" . | nindent 4 }}
